# SPI-command-interpreter

./: .gitignore  CMakeLists.txt  Interpreter.sln  comments.md
Debug/: Interpreter.ilk
Interpreter/: A03_button_down.txt  B04_button_tab.txt  CMakeLists.txt  Commands.cpp  Commands.h  Interpreter.cpp  Interpreter.h  Interpreter.sln  Interpreter.vcxproj  Interpreter.vcxproj.filters  MoreRegisters.json  Registers.cpp  Registers.h  Registers.json  bugs.txt  createApplicationFolder.bat  main.cpp  utils.h
Interpreter/Debug/: main.obj.enc  vc141.idb
Interpreter/Debug/Interpreter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Interpreter.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Interpreter/inc/: Registers.h
Interpreter/include/: Commands.h  Interpreter.h  utils.h
Interpreter/source/: Commands.cpp  Interpreter.cpp  Registers.cpp  main.cpp
Interpreter/src/: Commands.cpp  Interpreter.cpp  Registers.cpp  main.cpp
InterpreterPy/: Commands.py  Interpreter.py  Registers.json  Registers.py  main.py  setup.py  utils.py
InterpreterPy/spi_interpreter/: Commands.py  Interpreter.py  Registers.py  __main__.py  setup.py
data/: MoreRegisters.json  Registers.json
data/presenter1/: A01_power_on.txt  A02_button_up.txt  B01_power_on.txt  B02_button_up.txt  B03_button_down.txt  B05_button_enter.txt
data/presenter2/: A01__power_on.txt  A03__function_key__doubleclick_return.txt  A04__function_key__singleclick_tab.txt  A06__key_up.txt  A07__key_down.txt  B01_power_on.txt  B02_key_up.txt  B03_key_down.txt  B04_key_audioRaiseVolume.txt  (+1 more)
